# origin

./: .gitignore
Database/Advanced_data_sampling/: insert_tab.sql  select_tab.sql
Design_Patterns_in_C++/Behavioral_Patterns_1/: Behavioral_Patterns_1.cpp  Behavioral_Patterns_1.sln  Behavioral_Patterns_1.vcxproj  Behavioral_Patterns_1.vcxproj.filters  log.txt
Design_Patterns_in_C++/Behavioral_Patterns_2/: Behavioral_Patterns_2.cpp  Behavioral_Patterns_2.sln  Behavioral_Patterns_2.vcxproj  Behavioral_Patterns_2.vcxproj.filters  error.txt  fatal_error.txt
Design_Patterns_in_C++/Behavioral_Patterns_3/: Behavioral_Patterns_3.cpp  Behavioral_Patterns_3.sln  Behavioral_Patterns_3.vcxproj  Behavioral_Patterns_3.vcxproj.filters
Design_Patterns_in_C++/Creation_patterns1/: Creation_patterns1.cpp  Creation_patterns1.sln  Creation_patterns1.vcxproj  Creation_patterns1.vcxproj.filters  sql_query_builder.h
Design_Patterns_in_C++/Creation_patterns2/: Creation_patterns2.cpp  Creation_patterns2.sln  Creation_patterns2.vcxproj  Creation_patterns2.vcxproj.filters  sql_query_builder.h
Design_Patterns_in_C++/Creation_patterns3/: Creation_patterns3.sln  Creation_patterns3.vcxproj  Creation_patterns3.vcxproj.filters
Design_Patterns_in_C++/Structural_patterns1/: Structural_patterns1.cpp  Structural_patterns1.sln  Structural_patterns1.vcxproj  Structural_patterns1.vcxproj.filters
Design_Patterns_in_C++/Structural_patterns2/: Structural_patterns2.cpp  Structural_patterns2.sln  Structural_patterns2.vcxproj  Structural_patterns2.vcxproj.filters
HW10/Task_1/: source.cpp
HW11/Task_3/: CMakeLists.txt  Task3_Client.cpp
HW11/Task_5/: CMakeLists.txt
HW11/Task_5/Task5_lib/: Equilateral_Triangle.cpp  Equilateral_Triangle.h  Figure.cpp  Figure.h  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.h  Rectangl.h  Rhombus.cpp  Rhombus.h  Right_Triangle.h  Square.h  Triangle.cpp  Triangle.h
HW6/Task_3/HW6_Task3/: CMakeLists.txt  HW6_Task3.sln
HW6/Task_3/HW6_Task3/HW6_Task3/: Equilateral_Triangle.cpp  Equilateral_Triangle.h  Figure.cpp  Figure.h  HW6_Task3.cpp  HW6_Task3.vcxproj  HW6_Task3.vcxproj.filters  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectangl.cpp  Rectangl.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_Triangle.cpp  Right_Triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
HW6/Task_3/HW6_Task3/HW6_Task3/x64/Debug/: HW6_Task3.exe.recipe  HW6_Task3.ilk  vc143.idb
HW6/Task_3/HW6_Task3/HW6_Task3/x64/Debug/HW6_Task3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HW6_Task3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
INI_Parser/INI_Parser/: INI_Parser.sln  INI_Parser.vcxproj  INI_Parser.vcxproj.filters  Parser.cpp  config.ini  ini_parser.cpp  ini_parser.h
Move_semantics/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Move_semantics/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Multithreaded_and_asynchronous_programming/Asynchronous_programming_1/: Asynchronous_programming_1.cpp  Asynchronous_programming_1.sln  Asynchronous_programming_1.vcxproj  Asynchronous_programming_1.vcxproj.filters
Multithreaded_and_asynchronous_programming/Asynchronous_programming_2/: Asynchronous_programming_2.cpp  Asynchronous_programming_2.sln  Asynchronous_programming_2.vcxproj  Asynchronous_programming_2.vcxproj.filters
Multithreaded_and_asynchronous_programming/Multithreading_1/: Multithreading_1.cpp  Multithreading_1.sln  Multithreading_1.vcxproj  Multithreading_1.vcxproj.filters
Multithreaded_and_asynchronous_programming/Multithreading_2/: Multithreading_2.cpp  Multithreading_2.sln  Multithreading_2.vcxproj  Multithreading_2.vcxproj.filters
Multithreaded_and_asynchronous_programming/Race_condition1/: Race_condition1.cpp  Race_condition1.sln  Race_condition1.vcxproj  Race_condition1.vcxproj.filters
Multithreaded_and_asynchronous_programming/Race_condition2/: Race_condition2.cpp  Race_condition2.sln  Race_condition2.vcxproj  Race_condition2.vcxproj.filters  consol_parameter.h
Multithreaded_and_asynchronous_programming/Race_condition3/: Data.cpp  Data.h  Race_condition3.cpp  Race_condition3.sln  Race_condition3.vcxproj  Race_condition3.vcxproj.filters
Multithreaded_and_asynchronous_programming/Refactoring/: Refactoring.cpp  Refactoring.sln  Refactoring.vcxproj  Refactoring.vcxproj.filters  shape.h
Multithreaded_and_asynchronous_programming/docker/: Dockerfile
Multithreaded_and_asynchronous_programming/docker_clang/: Dockerfile  Source.cpp
Multithreaded_and_asynchronous_programming/docker_gcc/: Dockerfile
Qt/Core_Qt_Modules/Task1/: CMakeLists.txt  main.cpp
Qt/Introduction_to_Qt/Task1/Task1/: CMakeLists.txt
Qt/QT_Designer/: CMakeLists.txt  mainwindow.ui
Qt/Q_Widget/Q_Widget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
RAII/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
RAII/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Racing_Simulator/: CMakeLists.txt  CMakeSettings.json  Source.cpp
Racing_Simulator/RS_Lib/: vehicle.h
Racing_Simulator/RS_Lib/air_vehicle/: broom.cpp  broom.h  eagle.cpp  eagle.h  magic_carpet.cpp  magic_carpet.h
Racing_Simulator/RS_Lib/ground_vehicle/: all_terrain_boots.cpp  all_terrain_boots.h  camel.cpp  camel.h  centaur.cpp  centaur.h  speed_camel.cpp  speed_camel.h
STL_vol_1/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
STL_vol_1/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
STL_vol_1/Task3/: Task3.cpp  (+4 more)
(+413 files in other folders)
